testimonial client photo source not working.. working on to fix it. Additionally, in extra small device, the about section items are aligned left.

--- a/assets/scss/pages/_about.scss
+++ b/assets/scss/pages/_about.scss
@@ -96,7 +96,7 @@
                 gap: 32px;
 
                 @include custom_responsive(0px,575.9px){
-                    align-items: center;
+                    align-items: left;
                 }
 
                 h5{
